[package]
name = "ink_sai"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"


[dependencies]
# Import of all ink! crates
primitive-types = {version="0.11.1", default-features = false}
ink_primitives = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

# Brush dependency
ink_sai_derive = { path = "derive"}
brush = { tag = "v1.6.1", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["access_control","psp22","pausable"] }

[features]
default = ["std"]
std = [
  "ink_primitives/std",
  "ink_metadata",
  "ink_metadata/std",
  "ink_env/std",
  "ink_storage/std",
  "ink_lang/std",
  "scale/std",
  "scale-info",
  "scale-info/std",

  # Brush dependency
  "brush/std",
]
ink-as-dependency = []

[lib]
name = "ink_sai"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
  "rlib",
]

[profile.release]
overflow-checks = false 
