[package]
name = "ink_sai_derive"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
syn = { version = "1.0" }
quote = "1.0"
proc-macro2 = "1"

# In you code you can import `brush_derive` with the next line
brush_derive = { tag = "v1.2.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false }


[lib]
name = "ink_sai_derive"
path = "lib.rs"
proc-macro = true

[features]
default = ["std"]
std = []