[package]
name = "voxtest"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
primitive-types = {version="0.11.1", default-features = false}
ink_primitives = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
ink_sai = { path = "../..", default-features = false }
brush = { tag = "v1.6.1", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["access_control","psp22"] }


[lib]
name = "voxtest"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "ink_sai/std",
    "brush/std"
]
ink-as-dependency = []

